// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcInlineActions > should render properly the item with the download attr 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <a
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
          download="random.jpg"
          href="random"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </a>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render properly the item with the download attr empty 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <a
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
          download=""
          href="random"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </a>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render properly when an item was given 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render properly with out the disabled href and download attrs 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <a
          class="ec-inline-actions__button ec-inline-actions__button--disabled"
          data-test="ec-inline-actions__button"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </a>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render properly with the anchor when the item have a href 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <a
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
          href="random"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </a>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render the item disabled when an item was given disabled 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button ec-inline-actions__button--disabled"
          data-test="ec-inline-actions__button"
          disabled=""
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render the item with an icon when a item was given with an icon 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <svg
            class="ec-icon ec-icon--warning ec-inline-actions__icon"
            data-test="ec-inline-actions__icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-block"
            />
          </svg>
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render the item with default popover options 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <svg
            class="ec-icon ec-inline-actions__icon ec-inline-actions__icon--no-type"
            data-test="ec-inline-actions__icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-block"
            />
          </svg>
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render the item with given popover options 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="20"
  placement="top"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <svg
            class="ec-icon ec-inline-actions__icon ec-inline-actions__icon--no-type"
            data-test="ec-inline-actions__icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#ec-simple-block"
            />
          </svg>
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render with one line break when a different arrays was given 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <!--v-if-->
          <span>
            Reject
          </span>
          
        </button>
      </li>
      
    </ul>
    <hr
      class="ec-inline-actions__delimiter"
      data-test="ec-inline-actions__delimiter"
    />
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-test="ec-inline-actions__item ec-inline-actions__item--1-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <!--v-if-->
          <span>
            Cancel
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;

exports[`EcInlineActions > should render with tooltip 1`] = `
<ec-stub
  data-test="ec-stub ec-popover-stub"
  distance="10"
  placement="bottom-end"
>
  
  
  
  <div
    class="ec-inline-actions"
    data-test="ec-inline-actions"
  >
    
    
    <ul
      data-test="ec-inline-actions__list"
    >
      
      <li
        class="ec-inline-actions__item"
        data-ec-tooltip-mock-content="Test tooltip"
        data-test="ec-inline-actions__item ec-inline-actions__item--0-0 ec-mock ec-tooltip-mock"
      >
        <button
          class="ec-inline-actions__button"
          data-test="ec-inline-actions__button"
        >
          
          <!--v-if-->
          <span>
            test
          </span>
          
        </button>
      </li>
      
    </ul>
    <!--v-if-->
    
    
  </div>
  
</ec-stub>
`;
